umas par de coisa

--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FinalBoss</title>
-    <!-- Importa o Phaser -->
     <script src="https://cdn.jsdelivr.net/npm/phaser@3/dist/phaser.min.js"></script>
-    <!-- Seção 1: Importa o arquivo que contém a classe FinalBoss -->
     <script src="minigame.js"></script>
     <style>
       body {
@@ -50,9 +48,19 @@
       const columns = canvas.width / fontSize;
       const drops = Array(Math.floor(columns)).fill(0);
 
+      // Carrega a imagem de fundo
+      const backgroundImage = new Image();
+      backgroundImage.src = "assets/background.png"; // Substitua pelo caminho da sua imagem
+
       function drawMatrix() {
+        // Desenha a imagem de fundo
+        ctx.drawImage(backgroundImage, 0, 0, canvas.width, canvas.height);
+
+        // Adiciona o efeito de desfoque para os caracteres
         ctx.fillStyle = "rgba(0, 0, 0, 0.1)";
         ctx.fillRect(0, 0, canvas.width, canvas.height);
+
+        // Desenha os caracteres do efeito Matrix
         ctx.fillStyle = "#0f0";
         ctx.font = fontSize + "px monospace";
 
@@ -67,25 +75,28 @@
         }
       }
 
-      setInterval(drawMatrix, 50);
+      // Aguarda o carregamento da imagem antes de iniciar o efeito
+      backgroundImage.onload = () => {
+        setInterval(drawMatrix, 50);
+      };
     </script>
 
-    <!-- Seção 2: Configurações do jogo e instanciando a classe FinalBoss -->
+    <!-- Configuração do jogo Phaser -->
     <script>
       // Cria as configurações do jogo, referenciando a classe FinalBoss
       const config = {
-    type: Phaser.AUTO,
-    width: 1920,
-    height: 1080,
-    parent: "game-container", // Define o container do jogo no HTML
-    transparent: true,
-    scale: {
-    mode: Phaser.Scale.FIT,          // O jogo se ajustará proporcionalmente
-    autoCenter: Phaser.Scale.CENTER_BOTH // O jogo será centralizado horizontalmente e verticalmente
-  },
-  scene: [FinalBoss] // Sua classe de cena
-};
-const game = new Phaser.Game(config);
+        type: Phaser.AUTO,
+        width: 1920,
+        height: 1080,
+        parent: "game-container", // Define o container do jogo no HTML
+        transparent: true,
+        scale: {
+          mode: Phaser.Scale.FIT, // O jogo se ajustará proporcionalmente
+          autoCenter: Phaser.Scale.CENTER_BOTH, // O jogo será centralizado horizontalmente e verticalmente
+        },
+        scene: [FinalBoss], // Sua classe de cena
+      };
+      const game = new Phaser.Game(config);
     </script>
   </body>
 </html>
